# assignment

./: README.md  pyproject.toml  requirements.txt
evaluation/: judge.py  prompts.py  report.py  scores.csv
oss_assitant/: app.py
