[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "kaleido>=1.3.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langsmith>=0.8.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
